--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,8 +71,16 @@
   
 	
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/vmlyr/job/o0gqbfwB'>VMLY&R Careers - Senior Data Analyst</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RPProServices/743999698519046-data-analyst'>RP Pro Services Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/apellis/job/osRrbfwF'> Apellis Pharmaceuticals Careers - Director, Biostatistics</a></h5> 
+<p><span class="badge badge-light">Waltham, Massachusetts</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/o0gqbfwB'>VMLY&R Careers - Senior Data Analyst</a></h5> 
+<p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/vmlyr/job/o8dqbfwG'>VMLY&R Careers - Senior Data Analyst</a></h5> 
@@ -130,7 +138,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/senior-data-analytics-analyst-2880'>Senior Data Analytics Analyst - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/senior-data-analytics-analyst-2880'>Senior Data Analytics Analyst - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -140,7 +148,7 @@
 <p><span class="badge badge-light">Mechelen,BE Mechelen,BE  Mechelen, Belgium  Mechelen,BE  Mechelen,BE  France Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698607225-associate-director-data-analysis'>Publicis Groupe Associate Director, Data & Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698607225-associate-director-data-analysis'>Publicis Groupe Associate Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -190,7 +198,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -210,7 +218,7 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1940807'>Job Application for Senior Data Analyst - Lifecycle Marketing at FreshBooks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1940807'>Job Application for Senior Data Analyst - Lifecycle Marketing at FreshBooks</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -278,7 +286,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/chownow/a4d0d7be-0f53-45cf-98f2-88726eefb8bd'>ChowNow  - Data Analyst, Revenue Operations</a></h5> 
+<h5><a href='https://jobs.lever.co/chownow/a4d0d7be-0f53-45cf-98f2-88726eefb8bd'>ChowNow  - Data Analyst, Revenue Operations</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -302,7 +310,7 @@
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -346,7 +354,7 @@
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -458,11 +466,11 @@
 <p><span class="badge badge-light">Montr?al, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -479,14 +487,6 @@
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.housing-technology.com/job/475/junior-data-analyst/'>Junior Data Analyst | Housing Technology Recruitment - IT Jobs in Housing</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://www.abrecco.com/job/datacentre-ops-analyst-windows-vmware-3-months-bellshill-market-rates-it-support-lanarkshire-1029.htm'>Datacentre Ops Analyst - Windows/VMWare - 3 months - Lanarkshire - UK - Scotland, Strathclyde, Lanarkshire - (1029)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
